updated mapping file